; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_memcache.c_do_memcache_get.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_memcache.c_do_memcache_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_connection = type { i32 }
%struct.memcache_value = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_memcache_get(%struct.rpc_connection* %0, i8* %1, i32 %2, double %3) #0 {
  %5 = alloca %struct.memcache_value, align 4
  %6 = alloca %struct.rpc_connection*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca double, align 8
  %10 = alloca i64, align 8
  store %struct.rpc_connection* %0, %struct.rpc_connection** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store double %3, double* %9, align 8
  %11 = load %struct.rpc_connection*, %struct.rpc_connection** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load double, double* %9, align 8
  %15 = call i64 @do_memcache_send_get(%struct.rpc_connection* %11, i8* %12, i32 %13, double %14)
  store i64 %15, i64* %10, align 8
  %16 = load %struct.rpc_connection*, %struct.rpc_connection** %6, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load double, double* %9, align 8
  %19 = call i32 @do_memcache_act(%struct.rpc_connection* %16, i64 %17, i32 1, double %18)
  %20 = getelementptr inbounds %struct.memcache_value, %struct.memcache_value* %5, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = getelementptr inbounds %struct.memcache_value, %struct.memcache_value* %5, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  ret i32 %22
}

declare dso_local i64 @do_memcache_send_get(%struct.rpc_connection*, i8*, i32, double) #1

declare dso_local i32 @do_memcache_act(%struct.rpc_connection*, i64, i32, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
